--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.6.0.1398</version>
+		</dependency>
 
 	</dependencies>
 	
@@ -33,6 +38,7 @@
 		</repository>
   	</distributionManagement>
 <build>
+  <pluginManagement>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -44,15 +50,18 @@
             </configuration>
         </plugin>
 	<plugin>
+		<groupId>org.sonarsource.scanner.maven</groupId>
+		<artifactId>sonar-maven-plugin</artifactId>
+		<version>3.6.0.1398</version>
+	</plugin>	
+	<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.19</version>
         </plugin>
     </plugins>
+  </pluginManagement>	  
 </build>	
 
-<properties>
-  <sonar.organization>sreddy9676</sonar.organization>
-  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-</properties>
+
 </project>
